# craftier

./: .flake8  .gitignore  .pydocstyle.ini  LICENSE  README.md  pylintrc  pyproject.toml
craftier/: __init__.py  __main__.py  class_finder.py  cli.py  codemod.py  config.py  fs.py  function_parser.py  libcst_typing.py  matcher.py  matchers.py  parenthesize.py  performance.py  refactor.py  transformer.py  utils.py
craftier/refactors/: sample.py
stubs/: parameterized.pyi
stubs/pyfakefs/: __init__.pyi  fake_filesystem_unittest.pyi
tests/: helpers.py  test_class_finder.py  test_cli.py  test_codemod.py  test_config.py  test_fs.py  test_function_parser.py  test_matcher.py  test_parenthesize.py  test_performance.py  test_transformer.py  test_utils.py
